--- a/wxplotjs/scss/wxplot.scss
+++ b/wxplotjs/scss/wxplot.scss
@@ -23,14 +23,25 @@ div.wxplot-interval-control {
 	color: red;
 }
 
-.wxplot-legend {
+.wxplot-legend-group {
+	display: inline-block;
 	border: 1px solid black;
+	padding: 2px;
+	margin: 2px;
+
+	div {
+		display: inline-block;
+	}
+}
+
+.wxplot-legend {
 	display: inline-block;
 	margin: 2px;
 	padding: 2px;
+	background-color: #efefef;
 
 	& > canvas {
-		margin-right: 5px;
+		margin-right: 2px;
 		vertical-align: text-bottom;
 	}
 }
