CSS changes that should have accompanied 86a167c

--- a/wxplotjs/scss/wxplot-test.scss
+++ b/wxplotjs/scss/wxplot-test.scss
@@ -44,3 +44,14 @@ html {
         height: 100%;
     }
 }
+
+#plot-controls {
+    &, & select {
+        font: 1rem sans-serif;
+        margin: 2px;
+    }
+
+    & label {
+        display: inline-block;
+    }
+}
