Created container for canvas to allow positioning elements over the canvas.

--- a/wxplotjs/scss/wxplot.scss
+++ b/wxplotjs/scss/wxplot.scss
@@ -111,5 +111,12 @@ div.wxplot-interval-control {
 }
 
 #wxplot-canvas {
-	padding-right: 3px;
+	width: 100%;
+	height: 100%;
+}
+
+#wxplot-canvas-box {
+	width: 700px;
+	height: 400px;
+	position: relative;
 }
