--- a/wxplotjs/scss/wxplot-test.scss
+++ b/wxplotjs/scss/wxplot-test.scss
@@ -66,7 +66,8 @@ button {
 #plot-canvas {
     position: relative;
 
-    & > canvas {
+    /* Make the canvas container match the dimensions of plot-canvas */
+    & > * {
         width: 100%;
         height: 100%;
     }
