--- a/wxplotjs/scss/wxplot.scss
+++ b/wxplotjs/scss/wxplot.scss
@@ -35,11 +35,14 @@ div.wxplot-interval-control {
 	float: right;
 }
 
+#wxplot-help-box, .wxplot-legend-group, #wxplot-trace-box {
+	background-color: white;
+}
+
 #wxplot-help-box {
 	position: absolute;
 	margin: 5px;
 	border: 1px solid black;
-	background-color: white;
 	overflow-y: scroll;
 	max-height: 100%;
 	z-index: 100;
@@ -51,7 +54,6 @@ div.wxplot-interval-control {
 
 .wxplot-legend-group {
 	display: inline-block;
-	background-color: white;
 	padding: 2px;
 	margin: 2px;
 	border: 1px solid black;
@@ -127,7 +129,7 @@ div.wxplot-interval-control {
 	font: 1rem sans-serif;
 }
 
-#wxplot-canvas {
+#wxplot-canvas, #wxplot-canvases {
 	width: 100%;
 	height: 100%;
 }
@@ -136,6 +138,12 @@ div.wxplot-interval-control {
 	width: 700px;
 	height: 400px;
 	position: relative;
+}
+
+#wxplot-trace-box {
+	border: 1px solid grey;
+	/* TODO: remove after axes are modularized into their own canvases. */
+	z-index: -1;
 }
 
 #wxplot-zoom, #wxplot-brush-indicator, #wxplot-brush {
