--- a/wxplotjs/scss/wxplot.scss
+++ b/wxplotjs/scss/wxplot.scss
@@ -129,7 +129,7 @@ div.wxplot-interval-control {
 	font: 1rem sans-serif;
 }
 
-#wxplot-canvas, #wxplot-canvases {
+#wxplot-canvas {
 	width: 100%;
 	height: 100%;
 }
@@ -138,12 +138,6 @@ div.wxplot-interval-control {
 	width: 700px;
 	height: 400px;
 	position: relative;
-}
-
-#wxplot-trace-box {
-	border: 1px solid grey;
-	/* TODO: remove after axes are modularized into their own canvases. */
-	z-index: -1;
 }
 
 #wxplot-zoom, #wxplot-brush-indicator, #wxplot-brush {
