--- a/wxplotjs/scss/wxplot-test.scss
+++ b/wxplotjs/scss/wxplot-test.scss
@@ -1,22 +1,3 @@
-/* 
- * Scrollbars should always be visible so the user knows if an element contains
- * extra content.
- */
-
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 7px;
-}
-::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, .5);
-  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
-}
-
-html {
-    font-size: 100%;
-}
-
 body {
     background-color: #F8F8F8;
 }
@@ -31,10 +12,6 @@ button, select {
 
 button {
     -webkit-appearance: none;
-}
-
-.overflow-scroll {
-    overflow: scroll;
 }
 
 #plot {
@@ -95,9 +72,9 @@ button {
 
     #plot-controls {
         /* 
-         * We don't want min-content here because it would make the plot
-         * controls section too wide if the user has a large font size. If
-         * anything doesn't fit a scrollbar will appear.
+         * A fixed percentage is better than min-content here because it keeps
+         * the plot from getting too wide. Either way, the plot needs to be
+         * tested on the smallest devices.
          */ 
         width: 33%;
     }
